add distinct database/server and setup for thelastbot

--- a/TheLastBot.Server/Configuration.ini
+++ b/TheLastBot.Server/Configuration.ini
@@ -1,7 +1,7 @@
 [Discord]
-ApiToken=OTEzMTM5MTAzOTcxODAzMjM3.YZ6JDw.xfZHLM06S8a2Uqpnp_Hj4_1BgnU
-GuildId=921486802878091264
-ChannelId=942780739471159326
+ApiToken=OTEzMTM5MTAzOTcxODAzMjM3.Gv4fyq.I6b_t961eor7-PQtp31jsBFOQPcqAmLCZrWf3A
+GuildId=972794526156599296
+ChannelId=972794526156599299
 
 [Ping]
 Delay=10
