--- a/TheLastBot.Server/TheLastBot.Server.csproj
+++ b/TheLastBot.Server/TheLastBot.Server.csproj
@@ -11,8 +11,9 @@
     <ItemGroup>
       <PackageReference Include="Dapper" Version="2.0.123" />
       <PackageReference Include="Discord.Addons.Interactive" Version="2.0.0" />
-      <PackageReference Include="Discord.Net" Version="3.4.0" />
-      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.3">
+      <PackageReference Include="Discord.Net" Version="3.6.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.4" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.4">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
