--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,10 +1,9 @@
-name: .NET
+name: Publish and Deploy Master
 
-on:
+on: 
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches:
+    - master
 
 jobs:
   build:
@@ -17,9 +16,25 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 6.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+    - name: Dotnet Publish
+      run: dotnet publish -c Release -o deploy
+      
+    - name: Install SSH Key
+      uses: shimataro/ssh-key-action@v2
+      with:
+        key: ${{ secrets.REMOTE_KEY }}
+        known_hosts: 'just-a-placeholder-so-we-dont-get-errors'
+      
+    - name: Adding Known Hosts
+      run: ssh-keyscan -H ${{ secrets.REMOTE_HOST }} >> ~/.ssh/known_hosts
+      
+    - name: Deploy with rsync
+      run: rsync -avz /home/runner/work/MaPagePerso.net/MaPagePerso.net/deploy/ ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}:${{ secrets.REMOTE_TARGET }}
+      
+    - name: Reload service
+      uses: garygrossgarten/github-action-ssh@release
+      with:
+        command: ./deploy-mapageperso-service.sh ${{ secrets.REMOTE_PASSWORD }} 
+        host: ${{ secrets.REMOTE_HOST }}
+        username: ${{ secrets.REMOTE_USER }}
+        privateKey: ${{ secrets.REMOTE_KEY }}
