--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -29,12 +29,12 @@ jobs:
       run: ssh-keyscan -H ${{ secrets.REMOTE_HOST }} >> ~/.ssh/known_hosts
       
     - name: Deploy with rsync
-      run: rsync -avz /home/runner/work/MaPagePerso.net/MaPagePerso.net/deploy/ ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}:${{ secrets.REMOTE_TARGET }}
+      run: rsync -avz /home/runner/work/thelastbot/thelastbot/deploy/ ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}:${{ secrets.REMOTE_TARGET }}
       
     - name: Reload service
       uses: garygrossgarten/github-action-ssh@release
       with:
-        command: ./deploy-mapageperso-service.sh ${{ secrets.REMOTE_PASSWORD }} 
+        command: ./deploy-thelastbot-service.sh ${{ secrets.REMOTE_PASSWORD }} 
         host: ${{ secrets.REMOTE_HOST }}
         username: ${{ secrets.REMOTE_USER }}
         privateKey: ${{ secrets.REMOTE_KEY }}
